# FlowFi

./: .gitignore  DEPLOYMENT.md  DORAHACKS_SUBMISSION.md  README.md  responsiveness_audit.md
backend/: main.py  test_cspr_conn.py
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: .env.example  SUPABASE_SETUP.md  VERCEL_ENV_VARS.md  deploy_new_nft.js  diagnose_mint.js  final_verify.js  package.json  pnpm-lock.yaml  test_logic_check.js  test_mint_fix.js
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/deploy/: route.ts
frontend/app/api/market-data/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/legal/: page.tsx
frontend/app/legal/compliance/: page.tsx
frontend/app/legal/privacy/: page.tsx
frontend/app/legal/terms/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/whitepaper/: page.tsx
frontend/components/immersive/: cards.tsx
frontend/components/ui/: footer.tsx  live-stats.tsx  navbar.tsx  wallet-balance.tsx
frontend/lib/: contract.ts  cspr-cloud.ts  pinata.ts  supabase.ts
scripts/: deploy_cspr_cloud.js  deploy_https_bypass.js  deploy_public.js  deploy_public_mint.js  deploy_python.py  get_contract_hash.js  mint_batch.js  test_mint_metadata.js  test_real_mint.js  verify_mint.js
