[package]
name = "flowfi-factor"
version = "1.0.0"
edition = "2021"
authors = ["FlowFi Team"]
description = "FlowFi Invoice Factoring Smart Contract for Casper Network"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = "1.1.0"

[dev-dependencies]
odra-test = "1.1.0"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
